--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "prettier"
   ],
   "rules": {
+    "jsx-a11y/no-static-element-interactions": "warn",
     "react/jsx-props-no-spreading": "warn",
     "jsx-a11y/no-noninteractive-element-interactions": "warn",
     "jsx-a11y/click-events-have-key-events": "warn",
