--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
